<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:id="@+id/group1">

        <item
            android:id="@+id/proxyItem"
            android:icon="@drawable/ic_proxy"
            android:title="@string/proxy"
            app:actionLayout="@layout/menu_item_switch" />

        <item
            android:id="@+id/nightModeItem"
            android:icon="@drawable/ic_night_mode"
            android:title="@string/night_mode"
            app:actionLayout="@layout/menu_item_switch" />

        <item
            android:id="@+id/aboutItem"
            android:icon="@drawable/ic_info"
            android:title="@string/about" />

        <item
            android:id="@+id/emptyItem"
            android:enabled="false"
            android:title="" />
    </group>
</menu>
