<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimaryDark"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/closeImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_margin="@dimen/margin_8"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="@dimen/margin_8"
            android:src="@drawable/ic_close"
            android:tint="?attr/colorControlNormal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/margin_16"
            android:layout_toEndOf="@id/closeImageView"
            android:text="@string/about"
            android:textSize="@dimen/text_size_small"
            android:textStyle="bold" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_16"
                android:layout_marginEnd="@dimen/margin_16"
                android:layout_marginBottom="@dimen/margin_8"
                android:autoLink="web"
                android:gravity="center"
                android:text="@string/app_description"
                android:textColor="@color/secondary_text_color"
                android:textSize="@dimen/text_size_tiny" />

            <LinearLayout
                android:id="@+id/appVersionLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/margin_16"
                    android:src="@drawable/ic_info"
                    android:tint="?attr/colorControlNormal" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="@dimen/margin_16"
                    android:paddingEnd="@dimen/margin_16"
                    android:paddingBottom="@dimen/margin_16">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_version"
                        android:textColor="@color/secondary_text_color"
                        android:textSize="@dimen/text_size_tiny" />

                    <TextView
                        android:id="@+id/versionTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size_tiny" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/bugLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/margin_16"
                    android:src="@drawable/ic_bug"
                    android:tint="?attr/colorControlNormal" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="@dimen/margin_16"
                    android:paddingEnd="@dimen/margin_16"
                    android:paddingBottom="@dimen/margin_16">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/contact_us"
                        android:textColor="@color/secondary_text_color"
                        android:textSize="@dimen/text_size_tiny" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/report_bug"
                        android:textSize="@dimen/text_size_tiny" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/channelLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/margin_16"
                    android:src="@drawable/ic_telegram"
                    android:tint="?attr/colorControlNormal" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="@dimen/margin_16"
                    android:paddingEnd="@dimen/margin_16"
                    android:paddingBottom="@dimen/margin_16">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/official_telegram_channel"
                        android:textColor="@color/secondary_text_color"
                        android:textSize="@dimen/text_size_tiny" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/join_channel"
                        android:textSize="@dimen/text_size_tiny" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/developerLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/margin_16"
                    android:src="@drawable/ic_code"
                    android:tint="?attr/colorControlNormal" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="@dimen/margin_16"
                    android:paddingEnd="@dimen/margin_16"
                    android:paddingBottom="@dimen/margin_16">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/developer"
                        android:textColor="@color/secondary_text_color"
                        android:textSize="@dimen/text_size_tiny" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/developer_name"
                        android:textSize="@dimen/text_size_tiny" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/privacyPolicyLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/margin_16"
                    android:src="@drawable/ic_privacy_policy"
                    android:tint="?attr/colorControlNormal" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="@dimen/margin_16"
                    android:paddingEnd="@dimen/margin_16"
                    android:paddingBottom="@dimen/margin_16">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/privacy_policy"
                        android:textColor="@color/secondary_text_color"
                        android:textSize="@dimen/text_size_tiny" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/learn_privacy_policy"
                        android:textSize="@dimen/text_size_tiny" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>