<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimaryDark"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:paddingTop="@dimen/height_status_bar">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/closeImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_margin="@dimen/margin_8"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="@dimen/margin_8"
            android:src="@drawable/ic_close"
            android:tint="?attr/colorControlNormal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/margin_16"
            android:layout_toEndOf="@id/closeImageView"
            android:text="@string/proxy"
            android:textSize="@dimen/text_size_small"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/actionsLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/margin_8"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/doneImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:padding="@dimen/margin_8"
                android:src="@drawable/ic_done"
                android:tint="?attr/colorControlNormal" />

            <ImageView
                android:id="@+id/moreImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:padding="@dimen/margin_8"
                android:src="@drawable/ic_more"
                android:tint="?attr/colorControlNormal" />

        </LinearLayout>

    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/margin_16">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_8"
                android:layout_marginEnd="@dimen/margin_8"
                android:layout_marginBottom="@dimen/margin_8"
                android:letterSpacing="0.05"
                android:lineSpacingExtra="4sp"
                android:text="@string/proxy_description"
                android:textColor="@color/secondary_text_color"
                android:textSize="@dimen/text_size_tiny" />

            <RadioGroup
                android:id="@+id/typeRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_8"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/socks5RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/socks5"
                    android:textAllCaps="true" />

                <RadioButton
                    android:id="@+id/httpRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/http"
                    android:textAllCaps="true" />

            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/serverTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_8"
                android:hint="@string/server">

                <EditText
                    android:id="@+id/serverEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:inputType="textCapWords"
                    android:paddingTop="@dimen/margin_8"
                    android:paddingBottom="@dimen/margin_8" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/portTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_8"
                android:hint="@string/port">

                <EditText
                    android:id="@+id/portEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:inputType="number"
                    android:paddingTop="@dimen/margin_8"
                    android:paddingBottom="@dimen/margin_8" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_8"
                android:hint="@string/username">

                <EditText
                    android:id="@+id/usernameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:inputType="textPersonName"
                    android:paddingTop="@dimen/margin_8"
                    android:paddingBottom="@dimen/margin_8" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_8"
                android:hint="@string/password">

                <EditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:inputType="textPassword"
                    android:paddingTop="@dimen/margin_8"
                    android:paddingBottom="@dimen/margin_8" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>